[package]
name = "btxs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
atty = "0.2.14"
clap = { version = "4.1.4", features = ["derive", "env"] }
color-eyre = "0.6.2"
ethers = { version = "1.0.2", features = ["rustls"] }
jsondp = { path = "../jsondp" }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
