[package]
name = "eth-logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
ethers = { version = "2.0.7", default_features = false }
serde = "1.0.165"
serde_json = "1.0.99"
ureq = { version = "2.7.1", features = ["json"] }
kv = { path = "../kv" }
tracing = "0.1.37"
serde-aux = "4.2.0"
anyhow = "1.0.71"
